vision/lbr_fri_ros2_stack_ws_foxy2/log/build_2023-12-03_22-39-42/workspace_controller/stderr.log
  File "/home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller/control_node.py", line 64
    print(f"Current theta: {joint_state.position"})
                                                 ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('

